<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/bottom_button">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Header layout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/seaColorMid"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/headLineTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_10"
                        android:text="@string/password_change"
                        android:textSize="16sp"
                        android:textColor="@color/white" />

                </LinearLayout>


                <!-- Email Id layout -->
                <LinearLayout
                    android:id="@+id/emailIdLayout"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/seaColorMid"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_10"
                            android:text="@string/email_id"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/emailID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="8dp"
                        android:background="@drawable/bg_edittext"
                        />

                </LinearLayout>


                <!-- Old password layout -->
                <LinearLayout
                    android:id="@+id/oldPasswordLayout"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/seaColorMid"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_10"
                            android:text="@string/old_password"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/oldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edittext"
                        android:padding="8dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <!-- new password layout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/seaColorMid"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_10"
                            android:text="@string/new_password"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edittext"
                        android:drawableEnd="@drawable/ic_password_not_visible"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        tools:ignore="SpeakableTextPresentCheck" />


                </LinearLayout>

                <!-- confirm password layout -->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/seaColorMid"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_10"
                            android:text="@string/confirm_password"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editTextHeight"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edittext"
                        android:drawableEnd="@drawable/ic_password_not_visible"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>


    <!-- Close Button layout -->
    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profileChangeSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/profileChangeCloseButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/close"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>



</RelativeLayout>